# vehicle_dynamics_control_sim

./: .gitignore  .pre-commit-config.yaml  README.md  test.py
docs/: CSUniSchoolLabReport.cls  Dufour_MPC_formulation_acados.aux  Dufour_MPC_formulation_acados.run.xml  Dufour_MPC_formulation_acados.tex  Dufour_MPC_formulation_acados.toc  Dufour_MPC_formulation_acados_alternative.aux  Dufour_MPC_formulation_acados_alternative.run.xml  Dufour_MPC_formulation_acados_alternative.tex  Dufour_MPC_formulation_acados_alternative.toc
docs/Figures/: dyn_bicycle_model.odg
src/acados_solvers/: CMakeLists.txt  package.xml
src/acados_solvers/acados/: MPC_parameters.py  acados_ocp.json  dynamics_model.py  mpc_gen.py  mpc_gen_and_sim.py
src/bayesian_optimizer/: package.xml  setup.cfg  setup.py
src/bayesian_optimizer/bayesian_optimizer/: bayesian_optimizer_node.py  bo.py  gp.py  optimize_hyperparameters_3d.py  plot_gp.py  plot_laptimes.py  plot_results_2d.py  plot_results_3d.py  plotting_arwo.py  plotting_script.py
src/bayesian_optimizer/config/: optimizer_params.yaml
src/bayesian_optimizer/launch/: launch_optimizer.launch.py
src/bayesian_optimizer/results/: results.csv
src/mpc_controller/: CMakeLists.txt  package.xml
src/mpc_controller/acados/: acados_ocp.json  mpc_gen.py
src/mpc_controller/config/: mpc_controller.yaml  mpc_initializer.yaml
src/mpc_controller/include/mpc_controller/: acados_solver_library.hpp  mpc_controller_class.hpp  mpc_geometry.hpp
src/mpc_controller/launch/: launch_mpc_controller.launch.py
src/mpc_controller/msg/: MpcAlgStateTrajectory.msg  MpcCostParameters.msg  MpcInputTrajectory.msg  MpcKappaTrajectory.msg  MpcSolverState.msg  MpcStateTrajectory.msg
src/mpc_controller/scripts/: MPC_parameters.py  dynamics_model.py  dynamics_model_initializer.py  gen_mpc_c_code.py  generate_solver_c_code.py  model_kinematic_bicycle_curv.py  mpc_gen_and_sim.py  plot_dynamics_sim.py  plot_sim_ocp.py  plot_sim_qp_init.py  setup_kinematic_bicycle_curv.py  setup_nlp_ocp_and_sim.py  setup_ocp.py  setup_qp_init.py  sim_nlp_no_qp_init.py  sim_nlp_with_qp_init.py  sim_qp_init.py  simulate_kinematic_bicycle_curv.py  test_casadi_interpolant.py
src/mpc_controller/src/: acados_solver_library.cpp  mpc_controller_class.cpp  mpc_controller_node.cpp  mpc_geometry.cpp
src/mpc_controller/utils/: bspline_testing.py  test_casadi_interpolant.py  test_kin2dyn_switch.py  trackbound_constraint_tinkering.py
src/pure_pursuit_controller/: CMakeLists.txt  package.xml
src/pure_pursuit_controller/config/: pp_controller.yaml
src/pure_pursuit_controller/src/: pp_controller_node.cpp
src/sim_backend/: CMakeLists.txt  package.xml
src/sim_backend/config/: time_params.yaml  transform_params.yaml  vehicle_params.yaml
src/sim_backend/foxglove_visualization/: 3D_foxglove_panel_settings.json  car.urdf
src/sim_backend/include/sim_backend/: dynamic_system.hpp  sim_geometry.hpp
src/sim_backend/launch/: sim_time.launch.py  sim_with_mpc.launch.py  sim_with_pp.launch.py  sim_without_controller.launch.py  sim_without_controller.py  vehiclesim_demo.launch.py
src/sim_backend/msg/: Point2D.msg  Point2DArray.msg  RefPath.msg  SysInput.msg  VehicleState.msg
src/sim_backend/src/: dynamic_system.cpp  dynamics_sim_node.cpp  sim_time_node.cpp  vehicle_frame_publisher.cpp
src/sim_backend/tracks/: FSG.csv  FSG_blue_cones.csv  FSG_middle_path.csv  FSG_yellow_cones.csv  circular_track_blue_cones.csv  circular_track_middle_path.csv  circular_track_yellow_cones.csv  straight_track_blue_cones.csv  straight_track_middle_path.csv  straight_track_yellow_cones.csv
src/sim_backend/utils/: create_circular_track.py  create_straight_line_track.py  perception_sim.py  plot_orthogonal_line.py  plot_pacejka.py  plot_segment_intersections.py  plot_track.py  process_track.py
src/sim_frontend/: package.xml  setup.cfg  setup.py
src/sim_frontend/sim_frontend/: plot_publisher_test.py  plotting_node.py
src/sim_visualization/: CMakeLists.txt  package.xml
src/sim_visualization/launch/: sim_visualization_without_ctlr.launch.py
src/sim_visualization/src/: sim_visualization_node.cpp
src/simple_controller/: CMakeLists.txt  package.xml
